@@ -5,9 +5,9 @@
 package aws
 
 import (
-	"testing"
-
+	awssdk "github.com/aws/aws-sdk-go-v2/aws"
 	"github.com/stretchr/testify/assert"
+	"testing"
 )
 
 func TestGetAWSCredentials(t *testing.T) {
@@ -25,4 +25,42 @@ func TestGetAWSCredentials(t *testing.T) {
 	assert.Equal(t, inputConfig.AccessKeyID, retrievedAWSConfig.AccessKeyID)
 	assert.Equal(t, inputConfig.SecretAccessKey, retrievedAWSConfig.SecretAccessKey)
 	assert.Equal(t, inputConfig.SessionToken, retrievedAWSConfig.SessionToken)
+}
+
+func TestEnrichAWSConfigWithEndpoint(t *testing.T) {
+	cases := []struct {
+		title             string
+		endpoint          string
+		serviceName       string
+		region            string
+		awsConfig         awssdk.Config
+		expectedAWSConfig awssdk.Config
+	}{
+		{
+			"endpoint and serviceName given",
+			"amazonaws.com",
+			"ec2",
+			"",
+			awssdk.Config{},
+			awssdk.Config{
+				EndpointResolver: awssdk.ResolveWithEndpointURL("https://ec2.amazonaws.com"),
+			},
+		},
+		{
+			"endpoint, serviceName and region given",
+			"amazonaws.com",
+			"cloudwatch",
+			"us-west-1",
+			awssdk.Config{},
+			awssdk.Config{
+				EndpointResolver: awssdk.ResolveWithEndpointURL("https://cloudwatch.us-west-1.amazonaws.com"),
+			},
+		},
+	}
+	for _, c := range cases {
+		t.Run(c.title, func(t *testing.T) {
+			enrichedAWSConfig := EnrichAWSConfigWithEndpoint(c.endpoint, c.serviceName, c.region, c.awsConfig)
+			assert.Equal(t, c.expectedAWSConfig, enrichedAWSConfig)
+		})
+	}
 }
